입 출차 구현 일부 API SPEC 변경